添加搜索引擎存储原理

--- a/crawler/字体反爬破解.md
+++ b/crawler/字体反爬破解.md
@@ -10,7 +10,7 @@
 
 因此，我们单纯的爬取 HTML 中的数值没没有用的。
 
-![image](<https://raw.githubusercontent.com/taydy/knowledge/master/image/image-20190526161705701.png>)
+![image](<http://image.yoyadoc.com/blog/2019-06-11-063910.png>)
 
 #### 破解思路
 
@@ -20,7 +20,7 @@
 
 通过 chrome 浏览器开发者工具查看对应的字体文件地址。
 
-![image-20190526162001577](<https://raw.githubusercontent.com/taydy/knowledge/master/image/image-20190526162001577.png>)
+![image-20190526162001577](<http://image.yoyadoc.com/blog/2019-06-11-063731.png>)
 
 通过分析发现，字体文件的真正地址是 HTML 中 `font-family`对应的值去掉`douyu`前缀后，拼接上`https://shark.douyucdn.cn/app/douyu/res/font/`并加上`.woff`后缀名。
 
