--- a/搜索引擎/存储原理.md
+++ b/搜索引擎/存储原理.md
@@ -36,7 +36,7 @@
 
 关于这些概念之间的关系，通过图 2 可以比较清晰地看出来：
 
-![image-20190607211606081](http://image.yoyadoc.com/blog/2019-06-11-063553.png)
+![image-20190607211606081](http://image.yoyadoc.com/blog/2019-06-11-143221.png)
 
 ​																					**图 2 倒排索引基本概念示意图**
 
@@ -77,8 +77,7 @@
 | 3        | Elasticsearch lets you perform and combine many types of searches. |
 | 4        | Elasticsearch is fast. Really, really fast.                  |
 
-中文和英文等语言不同，单词之间没有明确的分隔符号，所以首先要用分词系统将文档自动
-切分成单词序列，这样每个文档就转换为由单词序列构成的数据流。
+中文和英文等语言不同，单词之间没有明确的分隔符号，所以首先要用分词系统将文档自动切分成单词序列，这样每个文档就转换为由单词序列构成的数据流。
 
 分词之后，我们可以得到如表 2 所示的最简单的倒排索引。
 
@@ -134,9 +133,7 @@
 
 
 
-实用的倒排索引还可以记载更多的信息，如表 4 所示的索引系统除了记录文档编号和单词
-频率信息外，额外记载了两类信息，即每个单词对应的文档频率信息（对应表 4 的第 2 列）
-及单词在某个文档出现位置的信息。
+实用的倒排索引还可以记载更多的信息，如表 4 所示的索引系统除了记录文档编号和单词频率信息外，额外记载了两类信息，即每个单词对应的文档频率信息（对应表 4 的第 2 列）及单词在某个文档出现位置的信息。
 
 ​														**图 3 带有单词频率、文档频率和出现位置信息的倒排索引**
 
@@ -291,7 +288,7 @@ Bi-MM 的步骤是：
 
 图 4 是这种词典结构的示意图。这种词典结构主要由两个部分构成，主体部分是哈希表，每个哈希表项保存一个指针，指针指向冲突链表，在冲突链表里，相同哈希值的单词形成链表结构。之所以会有冲突链表，是因为两个不同单词获得相同的哈希值，如果是这样，在哈希方法里被称做是一次冲突，可以将相同哈希值的单词存储在链表里，以供后续查找。
 
-![image-20190608201033390](http://image.yoyadoc.com/blog/2019-06-11-063603.png)
+![image-20190608201033390](http://image.yoyadoc.com/blog/2019-06-11-143211.png)
 
 
 
