--- a/搜索引擎/存储原理.md
+++ b/搜索引擎/存储原理.md
@@ -400,7 +400,7 @@ Advance(98) -> 98 MATCH!!!
 [12,31,61]
 ```
 
-12,31,55 分别指向自己对应的 block，这样就可以很快地跨 block 移动指向位置了。
+12,31,61 分别指向自己对应的 block，这样就可以很快地跨 block 移动指向位置了。
 
 ![skiplist](http://image.yoyadoc.com/blog/2019-06-11-063454.png)
 
@@ -408,7 +408,7 @@ Advance(98) -> 98 MATCH!!!
 
 ![frameOfReference](http://image.yoyadoc.com/blog/2019-06-11-063508.png)
 
-例如，如果你的 postings list 是`[73, 300, 302, 343, 372]`，则增量列表将是`[73, 227, 2, 30, 11, 29]`。这里有趣的是，所有增量都在 0 到 255 之间，因此每个值只需要一个字节。Lucene 用来对磁盘上的倒排索引进行编码的技术是：
+例如，如果你的 postings list 是`[73, 300, 302, 332, 343, 372]`，则增量列表将是`[73, 227, 2, 30, 11, 29]`。这里有趣的是，所有增量都在 0 到 255 之间，因此每个值只需要一个字节。Lucene 用来对磁盘上的倒排索引进行编码的技术是：
 
 1. 使用 delta 编码；
 2. 将编码后的结果拆分为 256 个 doc ID 的 block；
