--- a/消息队列/消息队列入门.md
+++ b/消息队列/消息队列入门.md
@@ -170,7 +170,7 @@ Kafka 的消息模型和 RocketMQ 是完全一样的，所有 RocketMQ 中对应
 
 ### 生产阶段
 
-在生产阶段，消息队列通过最常用的请求确认机制，来保证消息的可靠传递：当你的代码调用发消息方法时，消息队列的客户端会把消息发送到 Broker，Broker 收到消息后，会给客户端返回一个确认响应，表明消息已经收到了。客户端收到响应后，完成了一次正常消息的发送。
+在生产阶段，消息队列通过最常用的请求确认机制，来保证消息的可靠传递：当你的代码调用发消息方法时，消息队列的客户端会把消息发送到 Broker，Broker 收到消息后，会给客户端返回一个确认响应，表明消息已经收到了。客户端收到响应后，完成了一次正常消息的发送。
 
 只要 Producer 收到了 Broker 的确认响应，就可以保证消息在生产阶段不会丢失。有些消息队列在长时间没收到发送确认响应后，会自动重试，如果重试再失败，就会以返回值或者异常的方式告知用户。
 
@@ -375,6 +375,8 @@ Kafka 在读写消息文件的时候，充分利用了 PageCache 的特性。一
 1. 从文件复制数据到 PageCache 中，如果命中 PageCache，这一步可以省掉；
 2. 从 PageCache 复制到应用程序的内存空间中，也就是我们可以操作的对象所在的内存；
 3. 从应用程序的内存空间复制到 Socket 的缓冲区，这个过程就是我们调用网络应用框架的 API 发送数据的过程。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gapb7jxpfyj31740u0gpv.jpg)
 
 Kafka 使用零拷贝技术可以把这个复制次数减少一次，上面的 2、3 步骤两次复制合并成一次复制。直接从 PageCache 中把数据复制到 Socket 缓冲区中，这样不仅减少一次数据复制，更重要的是，由于不用把数据复制到用户内存空间，DMA 控制器可以直接完成数据复制，不需要 CPU 参与，速度更快。
 
