--- a/消息队列/消息队列入门.md
+++ b/消息队列/消息队列入门.md
@@ -1,5 +1,3 @@
-# 消息队列
-
 ## 为什么需要消息队列
 
 消息队列最常被使用的三个场景：**异步处理、流量控制和服务解耦**。
@@ -279,7 +277,7 @@ channel.basic_consume(queue='hello', on_message_callback=callback)
 
 在所有的存储系统中，消息队列的存储可能是最简单的。
 
-每个主题包含若干个分区，每个分区其实就是一个 WAL(Write Ahead Log)，写入的时候只能在尾部追加，不允许修改。读取的时候，根据一个索引序号进行查询，然后顺序往下读。
+每个主题包含若干个分区，每个分区其实就是一个 WAL(Write Ahead Log)，写入的时候只能在尾部追加，不允许修改。读取的时候，根据一个索引序号进行查询，然后顺序往下读。-000
 
 ### Kafka
 
