添加输入输出设备

--- a/计算机组成原理/输入输出设备.md
+++ b/计算机组成原理/输入输出设备.md
@@ -16,3 +16,51 @@
 
 无论是内置在主板上的接口，还是集成在设备上的接口，除了三类寄存器之外，还有对应的控制电路。正是通过这个控制电路，CPU 才能通过向这个接口电路板传输信号，来控制实际的硬件。
 
+我们先来看一看，硬件设备上的这些寄存器有什么用。这里，我拿我们平时用的打印机作为例子。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb5dmq97fbj31940u0afa.jpg)
+
+- **数据寄存器(Date Register)** CPU 向 I/O 设备写入需要传输的数据，比如要打印的内容是“Test”，我们就要先发送一个“T”给到对应的 I/O 设备。
+
+- **命令寄存器(Command Register)** CPU 发送一个命令，告诉打印机，要进行打印工作。这个时候，打印机里面的控制电路会做两个动作。第一个，是去设置我们的状态寄存器里面的状态，把状态设置成 not-ready。第二个，就是实际操作打印机进行打印。
+
+- **状态寄存器(Status Register)** 告诉 CPU，现在设备已经在工作了，所以这个时候，CPU 你再发送数据或者命令过来，都是没有用的。直到前面的动作已经完成，状态寄存器重新变成了 ready 状态，我们的 CPU 才能发送下一个字符和命令。
+
+当然，在实际情况中，打印机里通常不只有数据寄存器，还会有数据缓冲区。我们的 CPU 也不是真的一个字符一个字符这样交给打印机去打印的，而是一次性把整个文档传输到打印机的内存或者数据缓冲区里面一起打印的。不过，通过上面这个例子，相信你对 CPU 是怎么操作 I/O 设备的，应该有所了解了。
+
+## 信号和地址
+
+CPU 和 I/O 设备的通信，一样是通过 CPU 支持的机器指令来执行的。
+
+计算机会把 I/O 设备的各个寄存器，以及 I/O 设备内部的内存地址，都映射到主内存地址空间来。主内存的地址空间里，会给不同的 I/O 设备预留一段一段的内存地址。CPU 想要和这些 I/O 设备通信的时候，就往这些地址发送数据。这些地址信息通过地址线来发送，而对应的数据信息通过数据线发送。
+
+I/O 设备会监听地址线，并且在 CPU 往自己地址发送数据的时候，把对应的数据线里面传输的数据，接入到对应的设备里面的寄存器和内存里面来。CPU 无论是向 I/O 设备发送命令、查询状态还是传输数据，都可以通过这样的方式。这种方式叫做**映射 IO** (Memory-Mapped I/O，简称 MMIO)。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb5e180cl4j30yx0u0422.jpg)
+
+MMIO 并不是唯一的一种 CPU 和设备通信的方式。在有 2000 多个指令的 Intel X86 架构的计算机，有专门的 in 和 out 指令用户和 I/O 设备通信。
+
+Intel CPU 虽然也支持 MMIO，不过它还可以通过特定的指令，来支持端口映射 I/O（Port-Mapped I/O，简称 PMIO）或者也可以叫独立输入输出（Isolated I/O）。
+
+其实 PMIO 的通信方式和 MMIO 差不多，核心的区别在于，PMIO 里面访问的设备地址，不再是在内存地址空间里面，而是一个专门的端口（Port）。这个端口并不是指一个硬件上的插口，而是和 CPU 通信的一个抽象概念。
+
+无论是 PMIO 还是 MMIO，CPU 都会传送一条二进制的数据，给到 I/O 设备的对应地址。设备自己本身的接口电路，再去解码这个数据。解码之后的数据呢，就会变成设备支持的一条指令，再去通过控制电路去操作实际的硬件设备。对于 CPU 来说，它并不需要关心设备本身能够支持哪些操作。它要做的，只是在总线上传输一条条数据就好了。
+
+这个，其实也有点像我们在设计模式里面的 Command 模式。我们在总线上传输的，是一个个数据对象，然后各个接受这些对象的设备，再去根据对象内容，进行实际的解码和命令执行。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb5ett7u1yj30b20clglx.jpg)
+
+这是一张显卡在设备管理器里面的资源（Resource）信息。可以看到，里面既有 Memory Range，这个就是设备对应映射到的内存地址，也就是我们上面所说的 MMIO 的访问方式。同样的，里面还有 I/O Range，这个就是我们上面所说的 PMIO，也就是通过端口来访问 I/O 设备的地址。最后，里面还有一个 IRQ，也就是会来自于这个设备的中断信号了。
+
+## 总结
+
+CPU 并不是发送一个特定的操作指令来操作不同的 I/O 设备。因为如果是那样的话，随着新的 I/O 设备的发明，我们就要去扩展 CPU 的指令集了。
+
+在计算机系统里面，CPU 和 I/O 设备之间的通信，是这么来解决的。
+
+首先，在 I/O 设备这一侧，我们把 I/O 设备拆分成，能和 CPU 通信的接口电路，以及实际的 I/O 设备本身。接口电路里面有对应的状态寄存器、命令寄存器、数据寄存器、数据缓冲区和设备内存等等。接口电路通过总线和 CPU 通信，接收来自 CPU 的指令和数据。而接口电路中的控制电路，再解码接收到的指令，实际去操作对应的硬件设备。
+
+而在 CPU 这一侧，对 CPU 来说，它看到的并不是一个个特定的设备，而是一个个内存地址或者端口地址。CPU 只是向这些地址传输数据或者读取数据。所需要的指令和操作内存地址的指令其实没有什么本质差别。通过软件层面对于传输的命令数据的定义，而不是提供特殊的新的指令，来实际操作对应的 I/O 硬件。
+
+
+
