--- a/网络协议/数据中心.md
+++ b/网络协议/数据中心.md
@@ -123,3 +123,65 @@ HTTPDNS 将解析速度和更新速度全部掌控在自己手中。一方面，
 HTTPDNS 通过智能调度之后返回的结果，也会缓存在客户端。为了不让缓存使得调度失真，客户端可以根据不同的移动网络运营商 WIFI 的 SSID 来分维度缓存。不同的运营商或者 WIFI 解析出来的结果会不同。
 
 ![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbckdc8x65j30n50m30vi.jpg)
+
+## CDN
+
+全球有那么多的数据中心，无论在哪里上网，临近不远的地方基本上都有数据中心。我们可以在这些数据中心里部署几台机器，形成一个缓存的集群来缓存部分数据，那么用户访问数据的时候，就可以就近访问了。
+
+这些分布在各个地方的各个数据中心的节点，就成为**边缘节点**。
+
+由于边缘节点数目比较多，但是每个集群规模比较小，不可能缓存下来所有东西，因而可能无法命中，这样就会在边缘节点之上。有区域节点，规模就要更大，缓存的数据会更多，命中的概率也就更大。在区域节点之上是中心节点，规模更大，缓存数据更多。如果还不命中，就只好回源网站访问了。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbclitgznwj30ko0bujt6.jpg)
+
+这就是 **CND 分发系统的架构**。CDN 系统的缓存，也是一层一层的，能不访问后端真正的源，就不打扰它。
+
+还记得上面 DNS 内容中讲过的基于 DNS 的全局负载均衡吗？这个负载均衡主要用来选择一个就近的同样运营商的服务器进行访问。你会发现，CDN 分发网络也是一个分布在多个区域、多个运营商的分布式系统，也可以用相同的思路选择最合适的边缘节点。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbclk2w6foj30o30gl76k.jpg)
+
+**在没有 CDN 的情况下**，用户向浏览器输入 www.web.com 这个域名，客户端访问本地 DNS 服务器的时候，如果本地 DNS 服务器有缓存，则返回网站的地址；如果没有，递归查询到网站的权威 DNS 服务器，这个权威 DNS 服务器是负责 web.com 的，它会返回网站的 IP 地址。本地 DNS 服务器缓存下 IP 地址，将 IP 地址返回，然后客户端直接访问这个 IP 地址，就访问到了这个网站。
+
+**有了 CDN 之后，情况发生了变化**。在 web.com 这个权威 DNS 服务器上，会设置一个 CNAME 别名，指向另外一个域名 www.web.cdn.com，返回给本地 DNS 服务器。
+
+当本地 DNS 服务器拿到这个新的域名时，需要继续解析这个新的域名。这个时候，再访问的就不是 web.com 的权威 DNS 服务器了，而是 web.cdn.com 的权威 DNS 服务器，这是 CDN 自己的权威 DNS 服务器。在这个服务器上，还是会设置一个 CNAME，指向另外一个域名，也即 CDN 网络的全局负载均衡器。
+
+接下来，本地 DNS 服务器去请求 CDN 的全局负载均衡器解析域名，全局负载均衡器会为用户选择一台合适的缓存服务器提供服务，选择的依据包括：
+
+- 根据用户 IP 地址，判断哪一台服务器距用户最近；
+- 用户所处的运营商；
+- 根据用户所请求的 URL 中携带的内容名称，判断哪一台服务器上有用户所需的内容；
+- 查询各个服务器当前的负载情况，判断哪一台服务器尚有服务能力。
+
+基于以上这些条件，进行综合分析之后，全局负载均衡器会返回一台缓存服务器的 IP 地址。
+
+本地 DNS 服务器缓存这个 IP 地址，然后将 IP 返回给客户端，客户端去访问这个边缘节点，下载资源。缓存服务器响应用户请求，将用户所需内容传送到用户终端。如果这台缓存服务器上并没有用户想要的内容，那么这台服务器就要向它的上一级缓存服务器请求内容，直至追溯到网站的源服务器将内容拉到本地。
+
+### CDN 可以缓存的内容
+
+CDN 可以缓存的内容有很多种。
+
+1. **静态页面、图片**等不怎么变的内容。
+
+   这些内容的分发往往采取拉取的方式，也即当发现未命中的时候，再去上一级进行拉取；
+
+2. **流媒体**。
+
+   CDN 支持流媒体协议，例如 RTMP 协议。在很多情况下，这相当于一个代理，从上一级缓存读取内容，转发给用户。由于流媒体往往是连续的，因而可以进行预先缓存的策略，也可以预先推送到用户的客户端。
+
+   流媒体数据量大，如果出现回源，压力会比较大，所以往往采取主动推送的模式，将热点数据主动推送到边缘节点。
+
+   对于流媒体来讲，很多 CDN 还提供预处理服务，也即文件在分发之前，经过一定的处理。例如将视频转换为不同的码率，以适应不同的网络带宽的用户需求；再如对视频进行分片，降低存储压力，也使得客户端可以选择使用的不同的码率加载不同的分片。
+
+   还有一个关键的问题是防盗链问题。最常用也最简单的方法就是 HTTP 头的 referer 字段，当浏览器发送请求的时候，一般会带上 referer，告诉服务器是从哪个页面链接过来的，服务器基于此可以获得一些信息用于处理。如果 referer 信息不是来自本站，就阻止访问或者跳转到其他链接。
+
+   referer 的机制相对比较容易破解，所以还需要配合其他的机制。
+
+   一种常用的机制是时间戳防盗链。使用 CDN 的管理员可以再配置界面上，和 CDN 厂商约定一个加密字符串。客户端去除当前的时间戳，要访问的资源及其路径，连同加密字符串进行签名算法得到一个字符串，然后生成一个下载链接，带上这个签名字符串和截止时间戳去访问 CDN。在 CDN 服务端，根据取出过期时间，和当前 CDN 节点时间进行比较，确认请求是否过期。然后 CDN 服务端有了资源及路径，时间戳，以及约定的加密字符串，根据相同的签名算法计算签名，如果匹配则一致，访问合法，才会将资源返回给客户。
+
+3. **动态的数据**。
+
+   对于动态的数据请求，既然数据时动态生成的，所以数据的逻辑计算和存储也相应的放在边缘的节点。其中定时从源数据那里同步存储的数据，然后在边缘进行计算得到结果。这就是**边缘计算**。
+
+   还有一种模式，数据不是在边缘计算生成的，而是在源站生成的，但是数据的下发则可以通过 CDN 的网络，对路径进行优化。因为 CDN 节点较多，能够找到离源站很近的边缘节点，也能找到离用户很近的边缘节点。中间的链路完全由 CDN 来规划，选择一个更加可靠的路径，使用类似专线的方式进行访问。
+
