--- a/网络协议/数据中心.md
+++ b/网络协议/数据中心.md
@@ -181,7 +181,7 @@ CDN 可以缓存的内容有很多种。
 
 3. **动态的数据**。
 
-   对于动态的数据请求，既然数据时动态生成的，所以数据的逻辑计算和存储也相应的放在边缘的节点。其中定时从源数据那里同步存储的数据，然后在边缘进行计算得到结果。这就是**边缘计算**。
+   对于动态的数据请求，既然数据时动态生成的，所以数据的逻辑计算和存储也相应的放在边缘的节点。其中定时从源数据那里同步存储的数据，然后在边缘进行计算得到结果。这就是**边缘计算模式**。
 
-   还有一种模式，数据不是在边缘计算生成的，而是在源站生成的，但是数据的下发则可以通过 CDN 的网络，对路径进行优化。因为 CDN 节点较多，能够找到离源站很近的边缘节点，也能找到离用户很近的边缘节点。中间的链路完全由 CDN 来规划，选择一个更加可靠的路径，使用类似专线的方式进行访问。
+   还有一种模式，数据不是在边缘计算生成的，而是在源站生成的，但是数据的下发则可以通过 CDN 的网络，对路径进行优化。因为 CDN 节点较多，能够找到离源站很近的边缘节点，也能找到离用户很近的边缘节点。中间的链路完全由 CDN 来规划，选择一个更加可靠的路径，使用类似专线的方式进行访问。这就是**路径优化模式**。
 
