--- a/网络协议/数据中心.md
+++ b/网络协议/数据中心.md
@@ -185,3 +185,134 @@ CDN 可以缓存的内容有很多种。
 
    还有一种模式，数据不是在边缘计算生成的，而是在源站生成的，但是数据的下发则可以通过 CDN 的网络，对路径进行优化。因为 CDN 节点较多，能够找到离源站很近的边缘节点，也能找到离用户很近的边缘节点。中间的链路完全由 CDN 来规划，选择一个更加可靠的路径，使用类似专线的方式进行访问。这就是**路径优化模式**。
 
+
+
+## VPN
+
+VPN(Virtual Private Network, 虚拟专用网)，就是利用开放的公众网络，建立专用数据传输通道，将远程的分支机构、移动办公人员等连接起来。
+
+### IPSec 协议
+
+VPN 通过隧道技术在公网上仿真一条点到点的专线，是通过利用一种协议来传输另外一种协议的技术，这里面涉及三种协议：**乘客协议**、**隧道协议**和**承载协议**。
+
+以 IPsec 协议为例：
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbd8w2v7ngj30fg03mgls.jpg)
+
+IPsec VPN 是基于 IP 协议的安全隧道协议。为了保证在公网上面信息的安全，因而采用了一定的机制保证安全性。
+
+- **私密性** 防止信息泄露给未经授权的个人，通过加密把数据从明文变成无法读懂的密文，从而确保数据的私密性。
+- **完整性** 数据没有被非法篡改，通过对数据进行 hash 运算，产生类似于质问的数据摘要，以保证数据的完整性。
+- **真实性** 数据确实是由特定的对端发出，通过身份认证可以保证数据的真实性。
+
+那如何保证对方就是真正的那个人呢？
+
+- **预共享秘钥** 双方事先商量好一个秘钥；
+- **使用数字签名来验证**
+
+基于以上三个特性，组成了 IPsec VPN 的协议簇。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbd95kalhmj30oo0b3wgj.jpg)
+
+在这个协议簇里面，有两种协议，这两种协议的区别在于封装网络包的格式不一样。
+
+- **AH(Authentication Header)** 只能进行数据摘要，不能实现数据加密；
+- **ESP(Encapsulating Security Payload)** 能够进行数据加密和数据摘要。
+
+在这个协议簇里面，还有两类算法，分别是**加密算法**和**摘要算法**。
+
+还包括两大组件，一个用于 VPN 的双方对称秘钥的交换的 **IKE 组件**，另一个是 VPN 的双方要对连接进行维护的 **SA(Secutity Association)组件**。
+
+### IPSec VPN 的建立过程
+
+IPSec VPN 的建立过程分为两个阶段。
+
+1. **建立 IKE 自己的 SA。**
+
+   这个 SA 用来维护一个通过身份认证和安全保护的通道，为第二个阶段提供服务。在这个阶段，通过 DH（Diffie-Hellman）算法计算出一个对称密钥 K。
+
+   DH 算法是一个比较巧妙的算法。客户端和服务端约定两个公开的质数 p 和 q，然后客户端随机产生一个数 a 作为自己的私钥，服务端随机产生一个 b 作为自己的私钥，客户端可以根据 p、q 和 a 计算出公钥 A，服务端根据 p、q 和 b 计算出公钥 B，然后双方交换公钥 A 和 B。
+
+   到此客户端和服务端可以根据已有的信息，各自独立算出相同的结果 K，就是**对称秘钥**。但是这个过程，对称密钥从来没有在通道上传输过，只传输了生成密钥的材料，通过这些材料，截获的人是无法算出的。
+
+   ![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdacpbgqyj30me0fktar.jpg)
+
+2. **建立 IPSec SA。**
+
+   在这个 SA 里面，双方会生成一个随机的对称密钥 M，由 K 加密传给对方，然后使用 M 进行双方接下来通信的数据。对称密钥 M 是有过期时间的，会过一段时间，重新生成一次，从而防止被破解。
+
+IPSec SA 里面有一下内容：
+
+- SPI(Security Parameter Index)，用于标识不同的连接；
+- 双方商量好的加密算法、哈希算法和封装算法；
+- 生存周期，超过这个周期，就要重新生成一个 IPsec SA，重新生成对称秘钥。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdai61zlmj30k708bta8.jpg)
+
+当 IPsec 建立好，接下来就可以开始打包封装传输了。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdaizmgbjj30u016ldrt.jpg)
+
+左面是原始的 IP 包，在 IP 头里面，会指定上一层的协议为 TCP。ESP 要对 IP 包进行封装，因而 IP 头里面的上一层协议为 ESP。在 ESP 的正文里面，ESP 的头部有双方商讨好的 SPI，以及这次传输的序列号。
+
+接下来全部是加密的内容。可以通过对称密钥进行解密，解密后在正文的最后，指明了里面的协议是什么。如果是 IP，则需要先解析 IP 头，然后解析 TCP 头，这是从隧道出来后解封装的过程。
+
+**有了 IPsec VPN 之后，客户端发送的明文的 IP 包，都会被加上 ESP 头和 IP 头，在公网上传输，由于加密，可以保证不被窃取，到了对端后，去掉 ESP 的头，进行解密。**
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdapwo73wj30kk0b7aba.jpg)
+
+这种点对点的基于 IP 的 VPN，能满足互通的要求，但是速度往往比较慢，这是由底层 IP 协议的特性决定的。IP 不是面向连接的，是尽力而为的协议，每个 IP 包自由选择路径，到每一个路由器，都自己去找下一跳，丢了就丢了，是靠上一层 TCP 的重发来保证可靠性。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdar0rlpbj30kr08sdhz.jpg)
+
+因为 IP 网络从设计的时候，就认为是不可靠的，所以即使同一个连接，也可能选择不同的道路，这样的好处是，一条道路崩溃的时候，总有其他的路可以走。当然，带来的代价就是，不断的路由查找，效率比较差。
+
+和 IP 对应的另一种技术称为 ATM。这种协议和 IP 协议的不同在于，它是面向连接的。你可以说 TCP 也是面向连接的啊。这两个不同，ATM 和 IP 是一个层次的，和 TCP 不是一个层次的。
+
+另外，TCP 所谓的面向连接，是不停地重试来保证成功，其实下层的 IP 还是不面向连接的，丢了就丢了。ATM 是传输之前先建立一个连接，形成一个虚拟的通路，一旦连接建立了，所有的包都按照相同的路径走，不会分头行事。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdb4efchqj30l008htas.jpg)
+
+好处是不需要每次都查路由表的，虚拟路径已经建立，打上了标签，后续的包傻傻的跟着走就是了，不用像 IP 包一样，每个包都思考下一步怎么走，都按相同的路径走，这样效率会高很多。
+
+但是一旦虚拟路径上的某个路由器坏了，则这个连接就断了，什么也发不过去了，因为其他的包还会按照原来的路径走，都掉坑里了，它们不会选择其他的路径走。
+
+ATM 技术虽然没有成功，但其屏弃了繁琐的路由查找，改为简单快速的标签交换，将具有全局意义的路由表改为只有本地意义的标签表，这些都可以大大提高一台路由器的转发功力。
+
+有没有一种方式将两者的优点结合起来呢？这就是**多协议标签交换(MPLS，Multi-Protocol Label Switching)**。MPLS 的格式如图所示，在原始的 IP 头之外，多了 MPLS 的头，里面可以打标签。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdb7razsnj30p8074mxx.jpg)
+
+在二层头里面，有类型字段，0x0800 表示 IP，0x8847 表示 MPLS Label。
+
+在 MPLS 头里面，首先是标签值占 20 位，接着是 3 位实验位，再接下来是 1 位栈底标志位，表示当前标签是否位于栈底了。这样就允许多个标签被编码到同一个数据包中，形成标签栈。最后是 8 位 TTL 存活时间字段，如果标签数据包的出发 TTL 值为 0，那么该数据包在网络中的生命期被认为已经过期了。
+
+有了标签，还需要设备认这个标签，并且能够根据这个标签转发，这种能够转发标签的路由器称为**标签交换路由器(LSR，Label Switching Router)**。
+
+这种路由器会有两个表格，一个就是传统的 FIB，也即路由表，另一个就是 LFIB，标签转发表。有了这两个表，既可以进行普通的路由转发，也可以进行基于标签的转发。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdbarl6kij30qi09pwgt.jpg)
+
+有了标签转发表，转发的过程如图所示，就不用每次都进行普通路由的查找了。
+
+这里我们区分 MPLS 区域和非 MPLS 区域。在 MPLS 区域中间，使用标签进行转发，非 MPLS 区域，使用普通路由转发，在边缘节点上，需要有能力将对于普通路由的转发，变成对于标签的转发。
+
+例如图中要访问 114.1.1.1，在边界上查找普通路由，发现马上要进入 MPLS 区域了，进去了对应标签 1，于是在 IP 头外面加一个标签 1，在区域里面，标签 1 要变成标签 3，标签 3 到达出口边缘，将标签去掉，按照路由发出。
+
+这样一个通过标签转换而建立的路径称为 LSP，标签交换路径。在一条 LSP 上，沿数据包传送的方向，相邻的 LSR 分别叫**上游 LSR** 和**下游 LSR**。
+
+有了标签，转发是很简单的事，但是如何生成标签，却是 MPLS 中最难修炼的部分。在 MPLS 秘笈中，这部分被称为 **LDP(Label Distribution Protocol)**，是一个动态的生成标签的协议。
+
+其实 LDP 与 IP 帮派中的路由协议十分相像，通过 LSR 的交互，互相告知去哪里应该打哪个标签，称为标签分发，往往是从下游开始的。
+
+![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbdbelpm4nj30qy0d3goy.jpg)
+
+如果有一个边缘节点发现自己的路由表中出现了新的目的地址，它就要给别人说，我能到达一条新的路径了。
+
+如果此边缘节点存在上游 LSR，并且尚有可供分配的标签，则该节点为新的路径分配标签，并向上游发出标签映射消息，其中包含分配的标签等信息。
+
+收到标签映射消息的 LSR 记录相应的标签映射信息，在其标签转发表中增加相应的条目。此 LSR 为它的上游 LSR 分配标签，并继续向上游 LSR 发送标签映射消息。
+
+当入口 LSR 收到标签映射消息时，在标签转发表中增加相应的条目。这时，就完成了 LSP 的建立。有了标签，转发轻松多了，但是这个和 VPN 什么关系呢？
+
+可以想象，如果我们 VPN 通道里面包的转发，都是通过标签的方式进行，效率就会高很多。
