--- a/网络协议/传输层.md
+++ b/网络协议/传输层.md
@@ -72,6 +72,21 @@ TCP 连接终止时，主机 1 先发送 FIN 报文，主机 2 进入 CLOSE_WAIT
 1. 内存资源占用，这个目前看来不是太严重，可以忽略；
 2. 对端口资源的占用，一个 TCP 连接至少消耗一个本地端口。端口资源也是有限的，一般可以开启的端口为 32768~61000，也可以通过 `net.ipv4.ip_local_port_range` 指定，如果 TIME_WAIT 状态太多，会导致无法创建新连接。
 
+#### 如何查看 TIME_WAIT 数量？
+
+```shell
+## 查看网络连接数：
+netstat -an |wc -l
+## 查看某个/特定ip的连接数
+netstat -an |grep xx |wc -l       
+## 查看连接数等待time_wait状态连接数
+netstat -an |grep TIME_WAIT|wc -l    
+## 查看建立稳定连接数量
+netstat -an |grep ESTABLISHED |wc -l
+```
+
+
+
 #### 如何优化 TIME_WAIT ?
 
 Linux 系统对于`net.ipv4.tcp_tw_reuse`的解释如下：
