修改错别字

--- a/网络协议/传输层.md
+++ b/网络协议/传输层.md
@@ -8,7 +8,7 @@
 
 **TCP 是可以有拥塞控制的**。它意识到包丢弃了或者网络的环境不好了，就会根据情况调整自己的行为，看看是不是发快了，要不要发慢点。**UDP 就不会，应用让我发，我就发，管它洪水滔天。**
 
-因而 **TCP 其实是一个有状态服务**，精确记录着发送了没有，接收到没有，发送到哪儿，应该接受哪个了。而 **UDP 则是无状态服务**。
+因而 **TCP 其实是一个有状态服务**，精确记录着发送了没有，接收到没有，发送到哪儿，应该接收哪个了。而 **UDP 则是无状态服务**。
 
 ## UDP
 
@@ -276,7 +276,7 @@ AdvertisedWindow 其实是 MaxRcvBuffer 减去 A。
 
 ## 套接字 Socket
 
-Socket 变成进行的是端到端的通信，基于 TCP 和 UDP 协议。
+Socket 编程进行的是端到端的通信，基于 TCP 和 UDP 协议。
 
 在网络层，Socket 函数需要指定到底是 IPv4 还是 IPv6，分别对应设置为 AF_INET 和 AF_INET6。另外，还要指定到底是 TCP 还是 UDP。TCP 协议是基于数据流的，所以设置为 SOCK_STREAM，而 UDP 是基于数据报的，因而设置为 SOCK_DGRAM。
 
