--- a/计算机组成原理/内存.md
+++ b/计算机组成原理/内存.md
@@ -2,7 +2,7 @@
 
 在我们日常使用的 Linux 或者 Windows 操作系统下，程序并不能直接访问物理内存。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb2z5449fzj30vq0n4di6.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb2z5449fzj30vq0n4di6.jpg" style="zoom:50%;" />
 
 内存被分成固定大小的页（Page），然后再通过虚拟内存地址（Virtual Address）到物理内存地址（Physical Address）的地址转换（Address Translation），才能到达实际存放数据的物理内存位置。而我们的程序看到的内存地址，都是虚拟内存地址。
 
@@ -14,11 +14,11 @@
 
 
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb2zar9470j30yr0u042j.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb2zar9470j30yr0u042j.jpg" style="zoom:50%;" />
 
 其实，前面的高位，就是内存地址的页号。后面的低位，就是内存地址里面的偏移量。做地址转换的页表，只需要保留虚拟内存地址的页号和物理内存地址的页号之间的映射关系就可以了。同一个页里面的内存，在物理层面是连续的。以一个页的大小是 4K 字节（4KB）为例，我们需要 20 位的高位，12 位的低位。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb2zejyw4rj313r0u00v8.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb2zejyw4rj313r0u00v8.jpg" style="zoom:50%;" />
 
 对于一个内存地址转换，其实就是这样三个步骤：
 
@@ -40,7 +40,7 @@
 
 
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb2z9u9lasj31jy0u0jw1.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb2z9u9lasj31jy0u0jw1.jpg" style="zoom:50%;" />
 
 对应的，一个进程会有一个 4 级页表。我们先通过 4 级页表索引，找到 4 级页表里面对应的条目（Entry）。这个条目里存放的是一张 3 级页表所在的位置。4 级页面里面的每一个条目，都对应着一张 3 级页表，所以我们可能有多张 3 级页表。
 
@@ -52,7 +52,7 @@
 
 事实上，多级页表就像一个多叉树的数据结构，所以我们常常称它为**叶表树**（Page Table Tree）。因为虚拟内存地址分布的连续性，树的第一层节点的指针，很多就是空的，也就不需要有对应的子树了。所谓不需要子树，其实就是不需要对应的 2 级、3 级的页表。找到最终的物理页号，就好像通过一个特定的访问路径，走到树最底层的叶子节点。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb2zk3s0qij30u00zfwmz.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb2zk3s0qij30u00zfwmz.jpg" style="zoom:50%;" />
 
 以这样的分成 4 级的多级页表来看，每一级如果都用 5 个比特表示。那么每一张某 1 级的页表，只需要 2^5=32 个条目。如果每个条目还是 4 个字节，那么一共需要 128 个字节。而一个 1 级索引表，对应 32 个 4KB 的也就是 128KB 的大小。一个填满的 2 级索引表，对应的就是 32 个 1 级索引表，也就是 4MB 的大小。
 
@@ -72,7 +72,7 @@
 
 TLB 和我们前面讲的 CPU 的高速缓存类似，可以分成指令的 TLB 和数据的 TLB，也就是 **ITLB** 和 **DTLB**。。同样的，我们也可以根据大小对它进行分级，变成 L1、L2 这样多层的 TLB。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb30m8hueqj319g0u0tbi.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb30m8hueqj319g0u0tbi.jpg" style="zoom:50%;" />
 
 为了性能，我们整个内存转换过程也要由硬件来执行。在 CPU 芯片里面，我们封装了**内存管理单元（MMU，Memory Management Unit）**芯片，用来完成地址转换。和 TLB 的访问和交互，都是由这个 MMU 控制的。
 
@@ -98,4 +98,4 @@ TLB 和我们前面讲的 CPU 的高速缓存类似，可以分成指令的 TLB 
 
 原先我们一个进程的内存布局空间是固定的，所以任何第三方很容易就能知道指令在哪里，程序栈在哪里，数据在哪里，堆又在哪里。这个其实为想要搞破坏的人创造了很大的便利。而地址空间布局随机化这个机制，就是让这些区域的位置不再固定，在内存空间随机去分配这些进程里不同部分所在的内存空间地址，让破坏者猜不出来。猜不出来呢，自然就没法找到想要修改的内容的位置。如果只是随便做点修改，程序只会 crash 掉，而不会去执行计划之外的代码。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb30t7y2t9j30u00wz77h.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb30t7y2t9j30u00wz77h.jpg" style="zoom:50%;" />
