--- a/计算机组成原理/输入输出设备.md
+++ b/计算机组成原理/输入输出设备.md
@@ -4,7 +4,7 @@
 
 接口本身就是一块电路板。CPU 其实不是和实际的硬件设备打交道，而是和这个接口电路板打交道。我们平时说的，设备里面有三类寄存器(**状态寄存器(Status Register)、 命令寄存器(Command Register) 以及数据寄存器(Data Register)**)，其实都在这个设备的接口电路上，而不在实际的设备上。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb5941v024j30ln0fxdgw.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb5941v024j30ln0fxdgw.jpg" style="zoom: 67%;" />
 
 把接口和实际设备分离，这个做法实际上来自于计算机走向**开放架构**的时代。
 
@@ -18,7 +18,7 @@
 
 我们先来看一看，硬件设备上的这些寄存器有什么用。这里，我拿我们平时用的打印机作为例子。
 
-![](https://tva1.sinaimg.cn/large/006tNbRwgy1gb5dmq97fbj31940u0afa.jpg)
+<img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb5dmq97fbj31940u0afa.jpg" style="zoom:50%;" />
 
 - **数据寄存器(Date Register)** CPU 向 I/O 设备写入需要传输的数据，比如要打印的内容是“Test”，我们就要先发送一个“T”给到对应的 I/O 设备。
 
