添加单例模式、内存页淘汰算法

--- a/网络协议/路由协议.md
+++ b/网络协议/路由协议.md
@@ -36,8 +36,6 @@ ip route add default scope global nexthop via 100.100.100.1 weight 1 nexthop via
 
 使用动态路由算法，可以根据路由协议生成动态路由表，随网络运行状况的变化而变化。
 
-
-
 这里的动态生成路由表其实就是如何在众多路由中找最短路径的问题。
 
 在大学里面学习计算机网络与数据结构的时候，知道求最短路径常用的有两种方法，一种是 Bellman-Ford 算法，一种是 Dijkstra 算法。在计算机网络中基本也是用这两种方法计算的。
@@ -56,7 +54,7 @@ ip route add default scope global nexthop via 100.100.100.1 weight 1 nexthop via
 
    **第一个问题就是好消息传得快，换消息传的慢。** 如果有个路由器加入了这个网络，它的邻居就能很快发现它，然后将消息广播出去。要不了多久，整个网络就都知道了。但是一旦一个路由器挂了，挂的消息是没有广播的。当每个路由器发现原来的道路到不了这个路由器的时候，感觉不到它已经挂了，而是试图通过其他的路径访问，直到试过了所有的路径，才发现这个路由器是真的挂了。
 
-   ![](https://tva1.sinaimg.cn/large/006tNbRwgy1gba831xl4xj30id0ssgoh.jpg)
+   <img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gba831xl4xj30id0ssgoh.jpg" style="zoom: 67%;" />
 
    **这种算法的第二个问题是，每次发送的时候，要发送整个全局路由表。**网络大了，谁也受不了，所以最早的路由协议 RIP 就是这个算法。它适用于小型网络（小于 15 跳）。当网络规模都小的时候，没有问题。现在一个数据中心内部路由器数目就很多，因而不适用了。
 
