--- a/计算机组成原理/内存.md
+++ b/计算机组成原理/内存.md
@@ -99,3 +99,50 @@ TLB 和我们前面讲的 CPU 的高速缓存类似，可以分成指令的 TLB 
 原先我们一个进程的内存布局空间是固定的，所以任何第三方很容易就能知道指令在哪里，程序栈在哪里，数据在哪里，堆又在哪里。这个其实为想要搞破坏的人创造了很大的便利。而地址空间布局随机化这个机制，就是让这些区域的位置不再固定，在内存空间随机去分配这些进程里不同部分所在的内存空间地址，让破坏者猜不出来。猜不出来呢，自然就没法找到想要修改的内容的位置。如果只是随便做点修改，程序只会 crash 掉，而不会去执行计划之外的代码。
 
 <img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb30t7y2t9j30u00wz77h.jpg" style="zoom:50%;" />
+
+## 页面回收算法
+
+在 Linux 系统中，当内存有盈余时，内核会尽量多地使用内存作为文件缓存，从而提高系统的性能。文件缓存页面会加入文件类型的 LRU 链表中，当系统内存紧张时，文件缓存页面会被丢弃，或者被修改的文件缓存会被写回到存储设备中，与块设备同步之后便可释放出物理内存。
+
+现在的应用程序越来越转向内存密集型，无论系统中有多少物理内存都是不够用的，因此 Linux 系统会使用存储设备当作交换分区，内核将很少使用的内存换出到交换分区，以便释放出物理内存，这个机制称为**页交换(Swapping)**，这些处理机制统称为**页面回收(Page Reclaim)**。
+
+在操作系统的发展过程中，有很多页面交换算法，其中每个算法都有各自的优缺点。Linux 内核中采用的页交换算法主要是 LRU 算法和第二次机会法。
+
+### LRU 算法
+
+LRU 是 Least Recently Used（最近最少使用）的缩写。LRU 假定最近不使用的页在较短的时间内也不会频繁使用。在内存不足时，这些页面将成为被换出的候选者。内核使用双向链表来定义 LRU 链表，并且根据页面的类型分为 LRU_ANON 和 LRU_FILE。每种类型的活跃性分为活跃 LRU 和不活跃 LRU，所以内核中一共有如下 5 个 LRU 链表。
+
+- 不活跃匿名页面链表 LRU_INACTIVE_ANON;
+- 活跃匿名页面链表 LRU_ACTIVE_ANON;
+- 不活跃文件映射页面链表 LRU_INACTIVE_FILE;
+- 活跃文件映射页面链表 LRU_INACTIVE_FILE;
+- 不可回收页面链表 LRU_UNEVICTABLE。
+
+LRU 链表之所以要分成这样，是因为当内存紧缺时总是优先换出文件缓存页面，而不是匿名页面。大多数情况下文件缓存页面不需要回写磁盘，除非页面内容被修改了，而匿名页面总是要被写入交换分区才能被换出。
+
+### 第二次机会法
+
+在经典的 LRU 链表中，新产生的页面加入 LRU 链表的开头，将 LRU 链表中现存的页面向后移动一个位置。当系统内存短缺时，LRU 链表尾部的页面将会离开并被换出。当系统再需要这些页面时，这些页面会重新置于 LRU 链表的开头。显然，这个设计不是很巧妙，在换出页面时，没有考虑该页面是频繁使用，还是很少使用。也就是说，频繁使用的页面依然会因为在 LRU 链表末尾而被换出。
+
+第二次机会算法的改进是为了避免把经常使用的页面置换出去。当选择置换页面时，依然和 LRU 算法一样，选择最早置入链表的页面，即在链表末尾的页面。
+
+第二次机会法设置了一个**访问状态位（硬件控制的位）**，要检查页面的访问位。如果访问位是 0，就淘汰此页面；如果访问位是 1，就给它第二次机会，并选择下一个页面来换出。当该页面得到第二次机会时，它的访问位被清 0，如果该页在此期间被访问过，则访问位置 1。这样给了第二次机会的页面将不会被淘汰，直到所有其他页面被淘汰过或者也给了第二次机会。因此，如果一个页面经常被使用，其访问位总保持 1，就一直不会被淘汰出去。
+
+Linux 内核使用 PG_active 和 PG_referenced 这两个标志位来实现第二次机会法。PG_active表示该页是否活跃，PG_referenced表示该页是否被引用过，主要函数如下：
+
+- mark_page_accessed()
+- page_referenced()
+- page_check_references()
+
+### OOM Killer 机制
+
+当页面回收机制也不能满足页面分配器的需求时，OOM Killer 是最后一个杀手锏了。
+
+它会选择占用内存比较高的进程来杀掉，从而释放出内存。
+
+OOM Killer 机制提供了几个参数来调整进程在 OOM Killer 中的行为。
+
+- **/proc/<pid>/oom_score_adj** 可以设置 -1000~1000 之间，当设置为 -1000 时，表示不会被 OOM Killer 选中；
+- **/proc/<pid>/oom_adj** 它的值从 -17~15，值越大，越容易被 OOM Killer 选中；值越小，被选中的可能性越小。当值为 -17 时，表示进程永远不会被选中。这个 oom_adj 是要被 oom_score_adj 替代的，只是为了兼容旧内核版本暂时保留；
+- **/proc/<pid>/oom_score** 表示当前进程的 oom 分数。
+
