style: 删除无用句号

--- a/计算机组成原理/内存.md
+++ b/计算机组成原理/内存.md
@@ -70,7 +70,7 @@
 
 于是，计算机工程师们专门在 CPU 里放了一块缓存芯片。这块缓存芯片我们称之为 **TLB**，全称是**地址变换高速缓冲**(Translation-Lookaside Buffer)。这块缓存存放了之前已经进行过地址转换的查询结果。这样，当同样的虚拟地址需要进行地址转换的时候，我们可以直接在 TLB 里面查询结果，而不需要多次访问内存来完成一次转换。
 
-TLB 和我们前面讲的 CPU 的高速缓存类似，可以分成指令的 TLB 和数据的 TLB，也就是 **ITLB** 和 **DTLB**。。同样的，我们也可以根据大小对它进行分级，变成 L1、L2 这样多层的 TLB。
+TLB 和我们前面讲的 CPU 的高速缓存类似，可以分成指令的 TLB 和数据的 TLB，也就是 **ITLB** 和 **DTLB**。同样的，我们也可以根据大小对它进行分级，变成 L1、L2 这样多层的 TLB。
 
 <img src="https://tva1.sinaimg.cn/large/006tNbRwgy1gb30m8hueqj319g0u0tbi.jpg" style="zoom:50%;" />
 
