style: 修改错别字

--- a/网络协议/应用层.md
+++ b/网络协议/应用层.md
@@ -149,7 +149,7 @@ HTTPS 协议的总体思路如下：
 
 然后，服务端会再给客户端一个服务端的数字证书，然后发送 `Server Hello Done` 消息。
 
-当客户端收到服务端的证书后，从自己信息的 CA 仓库中，拿 CA 的证书里面的公钥去解密证书。如果能够成功，则说明证书是可信的。这个过程中，可能会不断往上追溯 CA、CA 的 CA、CA 的 CA 的 CA，反正知道一个授信的 CA 就可以了。
+当客户端收到服务端的证书后，从自己信任的 CA 仓库中，拿 CA 的证书里面的公钥去解密证书。如果能够成功，则说明证书是可信的。这个过程中，可能会不断往上追溯 CA、CA 的 CA、CA 的 CA 的 CA，反正知道一个授信的 CA 就可以了。
 
 证书验证完毕之后，客户端计算产生随机数字 `Pre-master`，发送 `Client Key Exchange`，用证书中的公钥加密，再发送给服务器，服务器可以通过私钥加密出来。
 
