style: 删除错别字

--- a/网络协议/传输层.md
+++ b/网络协议/传输层.md
@@ -257,9 +257,9 @@ AdvertisedWindow 其实是 MaxRcvBuffer 减去 A。
 
 但是线性增长还是增长，还是越来越多，直到有一天，出现了拥塞。
 
-拥塞的一种表现形式是丢包，需要超时重传，这个时候，将 sshresh 设为 cwnd/2，将 cwnd 设为 1，重新开始慢启动。这真是一旦超时重传，马上回到解放前。但是这种方式太激进了，将一个高速的传输速度一下子停了下来，会造成网络卡顿。
+拥塞的一种表现形式是丢包，需要超时重传，这个时候，将 ssthresh 设为 cwnd/2，将 cwnd 设为 1，重新开始慢启动。这真是一旦超时重传，马上回到解放前。但是这种方式太激进了，将一个高速的传输速度一下子停了下来，会造成网络卡顿。
 
-前面我们讲过**快速重传算法**。当接收端发现丢了一个中间包的时候，发送三次前一个包的 ACK，于是发送端就会快速的重传，不必等待超时再重传。TCP 认为这种情况不严重，因为大部分没丢，只丢了一小部分，cwnd 减半为 cwnd/2，然后 sshthresh = cwnd，当三个包返回的时候，cwnd = sshthresh + 3，也就是没有一夜回到解放前，而是还在比较高的值，呈线性增长。
+前面我们讲过**快速重传算法**。当接收端发现丢了一个中间包的时候，发送三次前一个包的 ACK，于是发送端就会快速的重传，不必等待超时再重传。TCP 认为这种情况不严重，因为大部分没丢，只丢了一小部分，cwnd 减半为 cwnd/2，然后 ssthresh = cwnd，当三个包返回的时候，cwnd = ssthresh + 3，也就是没有一夜回到解放前，而是还在比较高的值，呈线性增长。
 
 ![](https://tva1.sinaimg.cn/large/006tNbRwgy1gbb2gkdy1dj30pn0h1784.jpg)
 
