--- a/分布式协议/分布式协议.md
+++ b/分布式协议/分布式协议.md
@@ -50,6 +50,10 @@ CAP 不可能三角说的是对于一个分布式系统而言，一致性（Cons
 
 现在就只剩下一致性（C）和可用性（A）可以选择了：要么选择一致性，保证数据绝对一致；要么选择可用性，保证服务可用。
 
-- **CP 模型** 当选择了一致性（C）的时候，如果因为消息丢失、延迟过高发生了网络分区，那么这个时候，当集群节点接收到来自客户端的写请求时，因为无法保证所有节点都是最新信息，所以系统将返回写失败错误，也就是说集群拒绝新数据写入。典型的应用是 Zookeeper、Etcd 和 HBase。
+- **CA 模型** CA 满足数据的一致性和高可用性，但没有可扩展性。如传统的单节点关系型数据库 ORACLE、MYSQL ，就是满足数据的一致性和高可用性；
+
+- **CP 模型** 当选择了一致性（C）的时候，如果因为消息丢失、延迟过高发生了网络分区，那么这个时候，当集群节点接收到来自客户端的写请求时，因为无法保证所有节点都是最新信息，所以系统将返回写失败错误，也就是说集群拒绝新数据写入。典型的应用是 Zookeeper、Etcd 和 HBase；
 - **AP 模型** 当选择了可用性（A）的时候，系统将始终处理客户端的查询，返回特定信息，如果发生了网络分区，一些节点将无法返回最新的特定信息，它们将返回自己当前的相对新的信息。典型的应用是 Cassandra 和 DynamoDB。
+
+
 
