feat: 添加 ACID 理论

--- a/分布式协议/分布式协议.md
+++ b/分布式协议/分布式协议.md
@@ -57,3 +57,23 @@ CAP 不可能三角说的是对于一个分布式系统而言，一致性（Cons
 
 
 
+## ACID 理论
+
+### Atomicity 原子性
+
+整个事务中的所有操作，要么全部完成，要么全部不完成，不可能停滞在中间某个环节。事务在执行过程中发生错误，会被回滚到事务开始前的状态，就像这个事务从来没有执行过一样。
+
+### Consistency 一致性
+
+一个事务可以封装状态改变（除非它是一个只读的）。事务必须始终保持系统处于一致的状态，不管在任何给定的时间并发事务有多少。
+
+### Isolation 隔离性
+
+多个事务并发访问时，事务之间是隔离的，一个事务不应该影响其它事务运行效果。
+
+### Durability 持久性
+
+在事务完成以后，该事务对数据库所作的更改便持久的保存在数据库之中，并不会被回滚。
+
+
+
