feat: 添加 BASE 理论

--- a/分布式协议/分布式协议.md
+++ b/分布式协议/分布式协议.md
@@ -77,3 +77,48 @@ CAP 不可能三角说的是对于一个分布式系统而言，一致性（Cons
 
 
 
+## BASE 理论
+
+BASE 理论是指：`Basically Available（基本可用）`、`Soft-state（ 软状态/柔性事务）`、`Eventual Consistency（最终一致性）`。它是基于 CAP 定理演化而来，是对 CAP 中一致性和可用性权衡的结果。
+
+### 基本可用
+
+指分布式系统在出现故障的时候，允许损失部分可用性，保证核心可用。但不等价于不可用。比如：搜索引擎0.5秒返回查询结果，但由于故障，2秒响应查询结果；网页访问过大时，部分用户提供降级服务等。
+
+#### 如何实现基本可用？
+
+以 12306 订票系统基本可用的设计为例，在春运期间，通过在不同的时间出售不同区域的票，来讲海量的访问请求错开。这就是常说的**流量削峰**。
+
+另外，在春运期间，用户提交的购票请求，往往会在队列中排队等待处理，可能过几分钟后系统才开始处理，然后影响处理结果。这就是**延迟响应**（或者说是**异步处理**）。
+
+再比如，你正负责一个互联网系统，突然出现了网络热点事件，好多用户涌进来，产生了海量的突发流量，系统过载了，大量图片因为网络超时无法显示。这时候我们可以用小图片来替代原始图片，通过降低图片的清晰度和大小，来提升系统的处理能力。这就是**体验降级**。
+
+我们也可以将接收到的请求放在置顶的队列中排队处理，如果请求等待时间超时了（假设是 100ms），就直接拒绝该请求；再比如队列满了之后，就清除队列中一定数量的排队请求，保证系统不过载。这就是**过载保护**。
+
+> 基本可用在本质上是一种妥协，也就是在出现节点故障或系统过载的时候，通过牺牲非核心功能的可用性，保障核心功能的稳定运行。
+
+### 软状态
+
+软状态是指允许系统存在中间状态，并且该中间状态不会影响系统整体可用性。即允许系统在不同节点间副本同步的时候存在延时。
+
+### 最终一致性
+
+系统中的所有数据副本经过一定时间后，最终能够达到一致的状态，不需要实时保证系统数据的强一致性。最终一致性是弱一致性的一种特殊情况。
+
+几乎所有的互联网系统采用的都是最终一致性，只有在实在无法使用最终一致性，才使用强一致性或事务，比如，对于决定系统运行的敏感元数据，需要考虑采用强一致性，对于与钱有关的支付系统或金融系统的数据，需要考虑采用事务。
+
+#### 如何实现最终一致性？
+
+- **读时修复** 在读取数据时，检测数据的不一致，进行修复。比如 Cassandra 的 Read Repair 实现，具体来说，在向 Cassandra 系统查询数据的时候，如果检测到不同节点的副本数据不一致，系统就自动修复数据；
+- **写时修复** 在写入数据，检测数据的不一致时，进行修复。比如 Cassandra 的 Hinted Handoff 实现。具体来说，Cassandra 集群的节点之间远程写数据的时候，如果写失败就将数据缓存下来，然后定时重传，修复数据的不一致性；
+- **异步修复** 这个是最常用的方式，通过定时对账检测副本数据的一致性，并修复。
+
+写时修复不需要做数据一致性对比，性能消耗比较低，对系统运行影响也不大，所以推荐在实现最终一致性时优先实现这种方式。而读时修复和异步修复因为需要做数据的一致性对比，性能消耗比较多，在开发实际系统时，要尽量优化一致性对比的算法，降低性能消耗，避免对系统运行造成影响。
+
+
+
+>BASE 理论是对 CAP 中一致性和可用性权衡的结果，它来源于对大规模互联网分布式系统实践的总结，是基于 CAP 定理逐步演化而来的。它的核心思想是，如果不是必须的话，不推荐实现事务或强一致性，鼓励可用性和性能优先，根据业务的场景特点，来实现非常弹性的基本可用，以及实现数据的最终一致性。
+>
+>BASE 理论主张通过牺牲部分功能的可用性，实现整体的基本可用，也就是说，通过服务降级的方式，努力保障极端情况下的系统可用性。
+
+ACID 理论是传统数据库常用的设计理念，追求强一致性模型。BASE 理论支持的是大型分布式系统，通过牺牲强一致性获得高可用性。BASE 理论在很大程度上，解决了事务型系统在性能、容错、可用性等方面痛点。
